# multitool

./: .editorconfig  .gitattributes  .gitignore  .prettierignore  ARCHITECTURE.md  ASSIGNMENT.md  CHANGELOG.md  CLAUDE.md  DECISIONS.md  README.md  SCAFFOLD_PLAN.md  SPEC.md  cliff.toml  eslint.config.js  index.html  lefthook.yml  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: ADDING_A_TOOL.md  ARCHITECTURE.md  DECISIONS.md  adding-a-tool.md  dashboard-redesign-plan.md
docs/plans/: AUDIO_EXTRACTOR.md  AUDIO_FORMAT_CONVERTER.md  AUDIO_TRIMMER.md  BACKLOG.md  IMAGE_CROP.md  LOREM.md  VIDEO_FORMAT_CONVERTER.md  VIDEO_TRIMMER.md  VIDEO_TRIMMER_FRAME_ACCURATE.md
docs/tools/: image-format-converter-plan.md  image-format-converter.md  images-to-pdf-plan.md  images-to-pdf.md  pdf-to-images-plan.md  pdf-to-images.md
scripts/: gen_pdf_fixture.py
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/multitool-core/: Cargo.toml  build.rs
src-tauri/multitool-core/src/: error.rs  ffmpeg.rs  fs.rs  image.rs  ipc.rs  lib.rs  pdfium.rs
src-tauri/multitool-core/src/audio_codecs/: decode.rs  encode.rs  mod.rs
src-tauri/multitool-core/src/image/: mod.rs  raster_format.rs
src-tauri/multitool-core/src/tools/: mod.rs
src-tauri/multitool-core/src/tools/audio_extractor/: convert.rs  job.rs  mod.rs
src-tauri/multitool-core/src/tools/audio_format_converter/: convert.rs  job.rs  mod.rs
src-tauri/multitool-core/src/tools/audio_trimmer/: convert.rs  job.rs  mod.rs
src-tauri/multitool-core/src/tools/image_crop/: convert.rs  job.rs  mod.rs
src-tauri/multitool-core/src/tools/image_format_converter/: convert.rs  job.rs  mod.rs
src-tauri/multitool-core/src/tools/images_to_pdf/: convert.rs  job.rs  mod.rs
src-tauri/multitool-core/src/tools/pdf_to_images/: convert.rs  job.rs  mod.rs  writer.rs
src-tauri/multitool-core/src/tools/video_format_converter/: convert.rs  job.rs  mod.rs
src-tauri/multitool-core/src/tools/video_trimmer/: convert.rs  job.rs  mod.rs  probe.rs  proxy.rs
src-tauri/multitool-core/tests/: ffmpeg_smoke.rs  integration.rs  pdfium_smoke.rs
src-tauri/multitool-core/tests/fixtures/audio/: tiny_mono.flac
src-tauri/multitool-core/tests/fixtures/image_format/: tiny.pgm  tiny.qoi  tiny.tga  tiny.tif
src-tauri/src/: asset_scope.rs  error.rs  lib.rs  main.rs  system.rs
src-tauri/src/fs/: mod.rs
src-tauri/src/ipc/: mod.rs  streaming_job.rs
src-tauri/src/tools/: mod.rs
src-tauri/src/tools/audio_extractor/: mod.rs
src-tauri/src/tools/audio_format_converter/: mod.rs
src-tauri/src/tools/audio_trimmer/: mod.rs
src-tauri/src/tools/image_crop/: mod.rs
src-tauri/src/tools/image_format_converter/: mod.rs
src-tauri/src/tools/images_to_pdf/: mod.rs
src-tauri/src/tools/pdf_to_images/: mod.rs
src-tauri/src/tools/video_format_converter/: mod.rs
src-tauri/src/tools/video_trimmer/: mod.rs
src-tauri/tests/: integration.rs
src/app/: AppLayout.tsx  Dashboard.test.tsx  Dashboard.tsx  globals.css  router.tsx
src/components/: JobProgress.test.tsx  JobProgress.tsx  TimeInput.tsx
src/components/ui/: progress.tsx
src/lib/: audioPreview.ts  errors.ts  imageFormats.test.ts  imageFormats.ts  jobRunner.test.ts  jobRunner.ts  system.ts  time.test.ts  time.ts  utils.ts  videoPreview.ts
src/lib/tools/: audioExtractor.test.ts  audioExtractor.ts  audioFormatConverter.test.ts  audioFormatConverter.ts  audioTrimmer.test.ts  audioTrimmer.ts  imageCrop.test.ts  imageCrop.ts  imageFormatConverter.test.ts  imageFormatConverter.ts  imagesToPdf.test.ts  imagesToPdf.ts  pdfToImages.test.ts  pdfToImages.ts  videoFormatConverter.test.ts  videoFormatConverter.ts  videoTrimmer.test.ts  videoTrimmer.ts
src/tools/: registry.ts
src/tools/audio-extractor/: AudioExtractor.test.tsx  AudioExtractor.tsx  index.ts  types.ts
src/tools/audio-format-converter/: AudioFormatConverter.test.tsx  AudioFormatConverter.tsx  index.ts  types.ts
src/tools/audio-trimmer/: AudioTrimmer.test.tsx  AudioTrimmer.tsx  Waveform.tsx  index.ts  types.ts
src/tools/image-crop/: CropFrame.tsx  ImageCrop.test.tsx  ImageCrop.tsx  cropGeometry.test.ts  cropGeometry.ts  index.ts  types.ts
src/tools/image-format-converter/: ImageFormatConverter.test.tsx  ImageFormatConverter.tsx  index.ts  types.ts
src/tools/images-to-pdf/: ImagesToPdf.test.tsx  ImagesToPdf.tsx  index.ts  types.ts
src/tools/lorem/: Lorem.test.tsx  Lorem.tsx  generator.test.ts  generator.ts  index.ts
src/tools/pdf-to-images/: PdfToImages.test.tsx  PdfToImages.tsx  index.ts  types.ts
src/tools/video-format-converter/: VideoFormatConverter.test.tsx  VideoFormatConverter.tsx  index.ts  types.ts
src/tools/video-trimmer/: VideoScrubber.tsx  VideoTrimmer.test.tsx  VideoTrimmer.tsx  index.ts  types.ts
tests/: setup.ts
tests/e2e/: audio-extractor.spec.ts  audio-format-converter.spec.ts  audio-trimmer.spec.ts  dashboard.spec.ts  image-crop.spec.ts  image-format-converter.spec.ts  images-to-pdf.spec.ts  lorem.spec.ts  pdf-to-images.spec.ts  video-format-converter.spec.ts  video-trimmer.spec.ts
tests/e2e/mocks/: audioExtractor.ts  audioFormatConverter.ts  audioPreview.ts  audioTrimmer.ts  imageCrop.ts  imageFormatConverter.ts  imageFormats.ts  imagesToPdf.ts  pdfToImages.ts  system.ts  videoFormatConverter.ts  videoTrimmer.ts
