[workspace]
members = [".", "multitool-core"]
# No `default-members`: `tauri build` runs `cargo build --bins --features
# tauri/custom-protocol`, and cargo applies `--features` to the selected
# package. With this Cargo.toml as a root-crate workspace, the default
# selection is the shell crate (`multitool`), which has the tauri dep and
# can satisfy the feature flag. The Tauri shell's test exe can't be
# launched on Windows (transitively imports getrandom 0.3's ProcessPrng
# from bcryptprimitives.dll, which fails to resolve in the Server 2025
# runner image with STATUS_ENTRYPOINT_NOT_FOUND), so CI and lefthook run
# `cargo test -p multitool-core --all-targets` to keep the shell's test
# exe out of the picture. All testable logic lives in multitool-core.

[package]
name = "multitool"
version = "0.2.1"
description = "Cross-platform offline multitool desktop app"
authors = ["Alex Yokisama <alex@drewl.com>"]
edition = "2021"

[lib]
name = "multitool_lib"
# Desktop-only (ASSIGNMENT §2). `cdylib`/`staticlib` are for mobile.
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
# Build script downloads the platform-matched pdfium binary from
# bblanchon/pdfium-binaries and stages it under `resources/pdfium/` so
# `tauri build` bundles it next to the installed binary. Mirrors the deps
# in `multitool-core/build.rs` — keep the two in sync.
ureq = "2"
flate2 = "1"
tar = "0.4"

[dependencies]
multitool-core = { path = "multitool-core" }
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
# `CancellationToken` re-exported by `multitool_core::ipc`; declared here too
# so `src/ipc/streaming_job.rs` can name the type in its public signature.
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-opener = "2.5.4"
