[package]
name = "multitool-core"
version = "0.1.0"
edition = "2021"
description = "Pure-logic crate for multitool: types and helpers that don't depend on Tauri."

[lib]
name = "multitool_core"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio-util = "0.7"
# Pinned: pdfium-render 0.9.1's default features include `pdfium_7763`, so we
# pin the native binary download to bblanchon's `chromium/7763` release in
# `build.rs`. Bumping one without the other is a footgun — keep them in lockstep.
pdfium-render = "0.9"
# `image` arrives transitively via pdfium-render's `image_025` default feature.
# Declared here too so convert.rs (C3) can use `image` types without leaning on
# pdfium-render's re-exports. `webp` is needed by images-to-pdf for the .webp
# input format from the brief; png + jpeg cover both tools' encode paths.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
# PDF assembly for images-to-pdf. Default features pull in printpdf's HTML +
# layout pipeline (azul-layout, kuchiki, rust-fontconfig) which we don't use —
# image-only PDFs go through ImageXObject directly, so the lean build is fine.
# 0.7 is intentional: stable, well-documented API; 0.8/0.9 reshaped surface
# every release.
printpdf = { version = "0.7", default-features = false }

[build-dependencies]
# Build script downloads + extracts the platform-matched pdfium binary from
# bblanchon/pdfium-binaries. Keep this set small — these compile on every
# fresh `cargo check`.
ureq = "2"
flate2 = "1"
tar = "0.4"

[dev-dependencies]
serde_json = "1"
tempfile = "3"
